--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
     <p>We sell fruits and vegetables</p>
     <h3 id="fruit">Fruits</h3>
     <ul id="fruList">
-        <li>Mangoes</li>
-        <li>Bananas</li>
-        <li>Water Melons</li>
+        <li id="h1">Mangoes</li>
+        <li id="h2">Bananas</li>
+        <li id="h3">Water Melons</li>
     </ul>
 
 <h3>Vegetables</h3>
