I changed the id of fruits and vegetables

--- a/index.html
+++ b/index.html
@@ -9,14 +9,14 @@
 <body>
     <h1 id="title">Welcome to Greens Kiosk</h1>
     <p>We sell fruits and vegetables</p>
-    <h3 id="fruit">Fruits</h3>
+    <h3 id="fru">Fruits</h3>
     <ul id="fruList">
-        <li id="h1">Mangoes</li>
-        <li id="h2">Bananas</li>
-        <li id="h3">Water Melons</li>
+        <li >Mangoes</li>
+        <li >Bananas</li>
+        <li>Water Melons</li>
     </ul>
 
-<h3>Vegetables</h3>
+<h3 id="veg">Vegetables</h3>
 
 <ul id="vegList">
 
